--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <script src="script/app.js"></script>
     </head>
     <body>
+		<header>
+			GeoGame
+		</header>
         <main>
 			
         </main>
