--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GeoGame</title>
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" href="style/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="style/style.css">
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+        <link rel="stylesheet" href="style/jquery-ui.css">
 
-        <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="script/jquery-2.2.4.js"></script>
+        <script src="script/jquery-ui.js"></script>
+        <script src="script/bootstrap.min.js"></script>
         <script src="script/app.js"></script>
     </head>
     <body>
