--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
 		<link rel="stylesheet" href="style/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="style/style.css">
-        <link rel="stylesheet" href="style/jquery-ui.css">
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
         <script src="script/jquery-2.2.4.js"></script>
-        <script src="script/jquery-ui.js"></script>
         <script src="script/bootstrap.min.js"></script>
         <script src="script/app.js"></script>
+        <script src="script/jquery-ui.js"></script>
+
     </head>
     <body>
         <main>
