--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 
         <script src="script/jquery-2.2.4.js"></script>
         <script src="script/bootstrap.min.js"></script>
-        <script src="script/app.js"></script>
         <script src="script/jquery-ui.js"></script>
+
+        <script src="script/app.js"></script>
+        <script src="script/main.js"></script>
+        <script src="script/game.js"></script>
+        <script src="script/login.js"></script>
+        <script src="script/about.js"></script>
+        <script src="script/highscore.js"></script>
+        <script src="script/config.js"></script>
 
     </head>
     <body>
