Working on Game functionality

--- a/pageContent/gameScreen.html
+++ b/pageContent/gameScreen.html
@@ -26,7 +26,7 @@
 </section>
 
 <section class="menu">
-    <input id="checkLocationButton" type="submit" value="Check Location" class="btn btn-lg btn-default"/>
+    <input id="verifyLocationButton" type="submit" value="Check Location" class="btn btn-lg btn-default"/>
     <h3 id="points"></h3>
     <input id="giveAHint" type="submit" value="Give me a hint" class="btn btn btn-default"/><br/>
     <input id="skipPicture" type="submit" value="Skip Picture" class="btn btn btn-default"/>
