--- a/pageContent/registrationModal.html
+++ b/pageContent/registrationModal.html
@@ -6,17 +6,17 @@
             <form>
                 <section class="input-group">
                     <p class="input-group-addon input-addon-login">Benutzername:</p>
-                    <input class="form-control" onkeyup="newUserInputKeyUp()" id="newUsernameInput" type="text">
+                    <input class="form-control" id="newUsernameInput" type="text">
                 </section>
                 <section class="input-group">
                     <p class="input-group-addon input-addon-login">Passwort:</p>
-                    <input class="form-control" onkeyup="newUserInputKeyUp()" id="newPasswordInput" type="password">
+                    <input class="form-control" id="newPasswordInput" type="password">
                 </section>
                 <section class="input-group">
                     <p class="input-group-addon input-addon-login">Passwort wiederholen:</p>
-                    <input class="form-control" onkeyup="newUserInputKeyUp()" id="newPassword2Input" type="password">
+                    <input class="form-control" id="newPassword2Input" type="password">
                 </section>
-                <input id="registrationSubmitButton" type="submit" value="Register" class="btn btn-default" disabled>
+                <input id="registrationSubmitButton" type="submit" value="Register" class="btn btn-default">
             </form>
         </section>
     </section>
