--- a/pageContent/configScreen.html
+++ b/pageContent/configScreen.html
@@ -1,22 +1,13 @@
 <header><h3 class="headerText">Config</h3></header>
 <section class="contentSize">
-    <form>
-        <section class="center input-group input-config">
-            <p class="input-group-addon input-addon-login2">Schwierigkeit: </p>
-            <select id="difficulty" class="form-control">
-                <option value="easy">Leicht</option>
-                <option value="middle">Mittel</option>
-                <option value="difficult">Schwer</option>
-            </select>
+    <section class="center panel panel-default">
+        <section class="panel-heading">
+            <label for="range">Validier Reichweite:</label>
+            <input type="text" id="range" readonly>
         </section>
-        <section class="center panel panel-default">
-            <section class="panel-heading">
-                <label for="range">Reichweite:</label>
-                <input type="text" id="range" readonly>
-            </section>
-            <section class="panel-body"><p id="slider-range"></p></p>
-            </section>
-    </form>
+        <section class="panel-body"><p id="slider"></p>
+        </section>
+    </section>
     <p class="buttonContainer">
         <button id="saveConfigButton" class="button btn btn-default">Speichern</button>
         <br/>
