--- a/pageContent/loginScreen.html
+++ b/pageContent/loginScreen.html
@@ -3,15 +3,15 @@
     <form>
         <section class="input-group input-group-lg"> 
             <h4 class="input-group-addon input-addon-login">Benutzername: </h4>
-            <input class="form-control" id="usernameInput" onkeyup="userInputKeyUp()" placeholder="Username"
+            <input class="form-control" id="usernameInput" placeholder="Username"
                    type="text"/></br> 
         </section>
         <section class="input-group input-group-lg"> 
             <h4 class="input-group-addon input-addon-login">Passwort: </h4> 
-            <input class="form-control" id="passwordInput" onkeyup="userInputKeyUp()" placeholder="Password"
+            <input class="form-control" id="passwordInput" placeholder="Password"
                    type="password"/></br> 
         </section>
         <input id="registerButton" type="submit" value="Register" class="btn btn-lg btn-default"/> 
-        <input id="loginButton" type="submit" value="Login" class="btn btn-lg btn-default" disabled/> 
+        <input id="loginButton" type="submit" value="Login" class="btn btn-lg btn-default"/>
     </form>
 </section>
