Did a looot of stuff

--- a/pageContent/aboutScreen.html
+++ b/pageContent/aboutScreen.html
@@ -1,7 +1,7 @@
 <header><h3 class="headerText">About us</h3></header>
 <section id="about">
     <p>Dies ist eine Single Page App, erstellt im Rahmen des Erfahrungsnotenprojektes des Moduls webeC (Web Engineering)
-        and der FHNW in Brugg.</p>
+        an der FHNW in Brugg.</p>
     <p>Developer: </p>
     <ul>
         <li>Simon Rissi</li>
