--- a/pageContent/registrationModal.html
+++ b/pageContent/registrationModal.html
@@ -1,6 +1,6 @@
 <section id='createUserModal' class='modal'>
     <section class='modal-content'>
-        <p id='closeModal'>x</p>
+        <p class='closeModal'>x</p>
         <header><h4 class="headerText">Register</h4></header>
         <section class="center loginSize">
             <form>
