--- a/pageContent/configScreen.html
+++ b/pageContent/configScreen.html
@@ -2,7 +2,7 @@
 <section class="contentSize">
     <section class="center panel panel-default">
         <section class="panel-heading">
-            <label for="range">Validier Reichweite:</label>
+            <label for="range">Toleranz:</label>
             <input type="text" id="range" readonly>
         </section>
         <section class="panel-body"><p id="slider"></p>
