--- a/pageContent/gameModal.html
+++ b/pageContent/gameModal.html
@@ -1,6 +1,6 @@
-<section id='gameModal' class='modal'>
-    <section class='modal-content'>
-        <p class='closeModal'>x</p>
+<section id="gameModal" class="modal" role="dialog">
+    <section class="modal-content">
+        <p class="closeModal">x</p>
         <section class="center loginSize">
             <h3 id="gameModalText"></h3>
         </section>
