--- a/pageContent/gameScreen.html
+++ b/pageContent/gameScreen.html
@@ -1,10 +1,10 @@
-<header>
-    <h3 class="headerText">Go to the place on this Picture
-        <button id="zurueckButtonG" class="menubtn btn btn-default">Menu</button>
+<header class="breakMe">
+    <h3 class="headerText">Geh zum Ort auf diesem Bild
+        <button id="zurueckButtonG" class="menubtn btn btn-default">Menü</button>
     </h3>
 </header>
 
-<section id="myCarousel" class="carousel slide" data-ride="carousel">
+<section id="myCarousel" class="carousel slide breakMe" data-ride="carousel">
     <p class="carousel-indicators">
         <!-- Indicators! -->
     </p>
@@ -17,17 +17,17 @@
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <p class="glyphicon glyphicon-chevron-left" aria-hidden="true"></p>
-        <p class="sr-only">Previous</p>
+        <p class="sr-only">Vorheriges</p>
     </a>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
         <p class="glyphicon glyphicon-chevron-right" aria-hidden="true"></p>
-        <p class="sr-only">Next</p>
+        <p class="sr-only">Nächstes</p>
     </a>
 </section>
 
-<section class="menu">
-    <input id="verifyLocationButton" type="submit" value="Check Location" class="btn btn-lg btn-default"/>
+<section class="menu breakMe">
+    <input id="verifyLocationButton" type="submit" value="Ort überprüfen" class="btn btn-lg btn-default"/>
     <h3 id="points"></h3>
-    <input id="giveAHint" type="submit" value="Give me a hint" class="btn btn btn-default"/><br/>
-    <input id="skipPicture" type="submit" value="Skip Picture" class="btn btn btn-default"/>
+    <input id="giveAHint" type="submit" value="Hinweis anzeigen" class="btn btn btn-default"/><br/>
+    <input id="skipPicture" type="submit" value="Bild überspringen" class="btn btn btn-default"/>
 </section>
