--- a/pageContent/registrationModal.html
+++ b/pageContent/registrationModal.html
@@ -4,15 +4,15 @@
         <header><h4 class="headerText">Register</h4></header>
         <section class="center loginSize">
             <form>
-                <section class="input-group">
+                <section class="input-group registerInput">
                     <p class="input-group-addon input-addon-login">Benutzername:</p>
                     <input class="form-control" id="newUsernameInput" type="text">
                 </section>
-                <section class="input-group">
+                <section class="input-group registerInput">
                     <p class="input-group-addon input-addon-login">Passwort:</p>
                     <input class="form-control" id="newPasswordInput" type="password">
                 </section>
-                <section class="input-group">
+                <section class="input-group registerInput">
                     <p class="input-group-addon input-addon-login">Passwort wiederholen:</p>
                     <input class="form-control" id="newPassword2Input" type="password">
                 </section>
