last stuff in GER

--- a/pageContent/configScreen.html
+++ b/pageContent/configScreen.html
@@ -1,4 +1,4 @@
-<header><h3 class="headerText">Config</h3></header>
+<header><h3 class="headerText">Konfiguration</h3></header>
 <section class="contentSize">
     <section class="center panel panel-default">
         <section class="panel-heading">
