--- a/pageContent/mainScreen.html
+++ b/pageContent/mainScreen.html
@@ -4,9 +4,9 @@
     <br/>
     <button id="highscoreButton" class="button btn btn-default">Highscore</button>
     <br/>
-    <button id="configButton" class="button btn btn-default">Config</button>
+    <button id="configButton" class="button btn btn-default">Konfiguration</button>
     <br/>
-    <button id="aboutButton" class="button btn btn-default">About</button>
+    <button id="aboutButton" class="button btn btn-default">Über uns</button>
     <br/>
     <button id="logoutButton" class="button btn btn-default">Logout</button>
     <br/>
