Stop that irritating auto slide! :dancer:

--- a/pageContent/gameScreen.html
+++ b/pageContent/gameScreen.html
@@ -4,7 +4,7 @@
     </h3>
 </header>
 
-<section id="myCarousel" class="carousel slide breakMe" data-ride="carousel">
+<section id="myCarousel" class="carousel slide breakMe" data-ride="carousel" data-interval="false">
     <p class="carousel-indicators">
         <!-- Indicators! -->
     </p>
