last changes, highscore user row blue :dart:

--- a/pageContent/aboutScreen.html
+++ b/pageContent/aboutScreen.html
@@ -1,4 +1,4 @@
-<header><h3 class="headerText">Über us</h3></header>
+<header><h3 class="headerText">Über uns</h3></header>
 <section id="about">
     <p>Dies ist eine Single Page App, erstellt im Rahmen des Erfahrungsnotenprojektes des Moduls webeC (Web Engineering)
         an der FHNW in Brugg.</p>
